--- a/pricing.html
+++ b/pricing.html
@@ -41,34 +41,30 @@
         <div class="grid grid-2 pricing-grid">
           <!-- Starter -->
           <div class="card card-price">
-            <h2 class="card-title">Starter Spotlight</h2>
-            <p class="price">$175</p>
+            <h2 class="card-title">Starter</h2>
+            <p class="price">$80</p>
             <p class="card-body">
               Best for small businesses, first-time promos, and testing what works.
             </p>
             <ul class="list">
-              <li>1 cinematic AI-powered ad (10–20 seconds)</li>
-              <li>On-screen CTA included</li>
-              <li>1 revision round</li>
-              <li>7 Day Delivery</li>
+              <li>3× cinematic video ads, ~10 seconds each</li>
+              <li>Optimized for vertical social platforms (Reels, TikTok, Shorts)</li>
+              <li>Tailored visuals and messaging to match your brand</li>
             </ul>
-            <a href="contact.html" class="btn btn-outline">Get Starter Spotlight</a>
+            <a href="contact.html" class="btn btn-outline">Get Starter Ad</a>
           </div>
 
           <!-- Growth -->
           <div class="card card-price card-highlight">
             <h2 class="card-title">Growth Campaign</h2>
-            <p class="price">$350</p>
+            <p class="price">$250</p>
             <p class="card-body">
               For brands ready to look more professional online and across social platforms.
             </p>
             <ul class="list">
-              <li>1 main cinematic ad (25–40 seconds)</li>
-              <li>2 short social cutdowns</li>
-              <li>Script refinement and messaging polish</li>
-              <li>Platform-optimized exports</li>
-              <li>2 revision rounds</li>
-              <li>7 Day Delivery</li>
+              <li>1× main cinematic ad, ~30 seconds</li>
+              <li>2× short cinematic ads, ~10 seconds each</li>
+              <li>Cohesive concept and visuals across all three videos</li>
             </ul>
             <a href="contact.html" class="btn btn-primary">Start a Growth Campaign</a>
           </div>
@@ -81,32 +77,27 @@
               For launches and brands that want a more serious, elevated presence.
             </p>
             <ul class="list">
-              <li>1 premium cinematic commercial (45–60 seconds)</li>
-              <li>3–4 social cutdowns</li>
-              <li>AI voiceover (optional)</li>
+              <li>1× flagship cinematic ad, ~60 seconds</li>
+              <li>2× supporting cinematic ads, ~20 seconds each</li>
+              <li>Story-driven structure to showcase brand, offer, and key benefits</li>
               <li>Story-driven pacing and structure</li>
-              <li>3 revision rounds</li>
-              <li>14 Day Delivery</li>
             </ul>
-            <a href="contact.html" class="btn btn-outline">Book Authority Launch</a>
+            <a href="contact.html" class="btn btn-outline">Get Authority Launch</a>
           </div>
 
           <!-- Domination -->
           <div class="card card-price">
             <h2 class="card-title">Domination Package</h2>
-            <p class="price">$1,500</p>
+            <p class="price">$750</p>
             <p class="card-body">
               For brands that want a full campaign: multiple ads, multiple angles, multi-platform.
             </p>
             <ul class="list">
-              <li>Multi-ad cinematic suite</li>
-              <li>Simple storyboard & campaign concept</li>
-              <li>Ads for multiple platforms (Web, YouTube, Meta, TikTok)</li>
-              <li>Priority delivery window</li>
-              <li>Creative direction included</li>
-              <li>Timeline: custom by project</li>
+              <li>1× cinematic ad, ~90 seconds</li>
+              <li>2× cinematic ads, ~30 seconds each</li>
+              <li>3× short cinematic ads, ~10 seconds each</li>
             </ul>
-            <a href="contact.html" class="btn btn-outline">Request Domination Package</a>
+            <a href="contact.html" class="btn btn-outline">Get Domination Package</a>
           </div>
         </div>
 
@@ -118,8 +109,8 @@
             For brands that want consistent, cinematic content on a monthly basis.
           </p>
           <ul class="list list-inline">
-            <li>4 short cinematic ads <strong>or</strong> 2 premium commercials each month</li>
-            <li>Priority edits and support</li>
+            <li>Ongoing campaign planning <strong>or</strong> 2 premium commercials each month</li>
+            <li>3 short ads each month ~30 seconds each</li>
             <li>Ongoing optimization of hooks and visuals</li>
           </ul>
           <div class="centered">
