--- a/contact.html
+++ b/contact.html
@@ -42,13 +42,37 @@
           <div>
             <h2 class="card-title">Project Intake</h2>
             <p class="card-body">
-              Fill out this quick form to start your project. You’ll receive a reply with a confirmation, simple next steps, and any key questions.
+              Fill out this quick form to start your project.
             </p>
-            <ul class="list">
-              <li>Review of your goals and brand</li>
-              <li>Package confirmation (or recommendation)</li>
-              <li>Estimated delivery window</li>
-            </ul>
+            <p> <strong>How The Process Works</strong>
+
+We keep things simple, transparent, and fully guided—so you always know what’s happening at every step.
+
+Step 1: Submit Your Project Details
+Fill out the short form with your business info, goals, and the package you’re interested in. This gives us everything needed to shape your ad correctly.
+
+Step 2: We Review & Prepare Your Concept
+Our system reviews your submission and prepares a high-level ad concept aligned with your package, brand tone, and intended outcome.
+
+Step 3: Confirmation Email Sent to You
+You will receive an email confirming:
+Your selected package
+Video length range
+Creative direction summary
+Pricing & next steps
+
+<strong>👉 Nothing is produced or charged until you confirm</strong>
+
+Step 4: You Approve & Production Begins
+Once you confirm via email, your ad enters production.
+Our AI-assisted creative system generates your cinematic video based on your selections.
+              
+Step 5: Delivery
+Your completed ad is delivered digitally, ready to use for:
+Social media
+Ads
+Website promotions
+Launch campaigns</p>
           </div>
 
           <div>
