--- a/contact.html
+++ b/contact.html
@@ -44,30 +44,31 @@
             <p class="card-body">
               Fill out this quick form to start your project.
             </p>
-            <p> <strong>How The Process Works</strong>
+            <p> <strong>How The Process Works</strong></p>
 
-We keep things simple, transparent, and fully guided—so you always know what’s happening at every step.
-
-Step 1: Submit Your Project Details
+<p>We keep things simple, transparent, and fully guided—so you always know what’s happening at every step.</p>
+        
+<p>Step 1: Submit Your Project Details
 Fill out the short form with your business info, goals, and the package you’re interested in. This gives us everything needed to shape your ad correctly.
+</p>
 
-Step 2: We Review & Prepare Your Concept
-Our system reviews your submission and prepares a high-level ad concept aligned with your package, brand tone, and intended outcome.
+<p>Step 2: We Review & Prepare Your Concept
+Our system reviews your submission and prepares a high-level ad concept aligned with your package, brand tone, and intended outcome.</p>
 
-Step 3: Confirmation Email Sent to You
+<p>Step 3: Confirmation Email Sent to You
 You will receive an email confirming:
 Your selected package
 Video length range
 Creative direction summary
-Pricing & next steps
+Pricing & next steps</p>
 
-<strong>👉 Nothing is produced or charged until you confirm</strong>
+<p><strong>👉 Nothing is produced or charged until you confirm</strong></p>
 
-Step 4: You Approve & Production Begins
+<p>Step 4: You Approve & Production Begins
 Once you confirm via email, your ad enters production.
-Our AI-assisted creative system generates your cinematic video based on your selections.
+Our AI-assisted creative system generates your cinematic video based on your selections.</p>
               
-Step 5: Delivery
+<p>Step 5: Delivery
 Your completed ad is delivered digitally, ready to use for:
 Social media
 Ads
@@ -102,10 +103,10 @@ Launch campaigns</p>
                 <label for="package">Which package are you interested in?</label>
                 <select id="package" name="package" required>
                   <option value="">Select a package</option>
-                  <option value="Starter Spotlight ($175)">Starter ($80)</option>
-                  <option value="Growth Campaign ($350)">Growth Campaign ($250)</option>
+                  <option value="Starter Spotlight ($80)">Starter ($80)</option>
+                  <option value="Growth Campaign ($250)">Growth Campaign ($250)</option>
                   <option value="Authority Launch ($550)">Authority Launch ($550)</option>
-                  <option value="Domination Package ($1,500)">Domination Package ($750)</option>
+                  <option value="Domination Package ($750)">Domination Package ($750)</option>
                   <option value="Monthly Retainer ($2,500 / Month)">Monthly Retainer ($2,500 / Month)</option>
                   <option value="Not sure">Not Sure – Recommend One</option>
                 </select>
@@ -157,7 +158,7 @@ Launch campaigns</p>
         "Growth Campaign ($250)": "https://www.paypal.com/ncp/payment/FCXFF9DDUDZ68",
         "Authority Launch ($550)": "https://www.paypal.com/ncp/payment/PN4DPGX9HBF6Q",
         "Domination Package ($750)": "https://www.paypal.com/ncp/payment/RK4C7VGSKG8HC",
-        "Monthly Retainer ($1,500 / Month)": "https://www.paypal.com/ncp/payment/9YNMNSQ8CR8G6"
+        "Monthly Retainer ($2,500 / Month)": "https://www.paypal.com/ncp/payment/9YNMNSQ8CR8G6"
       };
 
       form.addEventListener("submit", function (event) {
