--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@ Launch campaigns</p>
 
               <div class="form-group">
                 <label for="message">Anything else we should know?</label>
-                <textarea id="message" name="message" rows="4" placeholder="Brand tone, references, special requests, etc."></textarea>
+                <textarea id="message" name="message" rows="4" placeholder="Tell us how you want your story...Brand tone, references, special requests, etc."></textarea>
               </div>
 
               <button type="submit" class="btn btn-primary btn-full">Submit Project Request</button>
@@ -134,7 +134,6 @@ Launch campaigns</p>
       </div>
     </section>
   </main>
-
   <footer class="site-footer">
     <div class="container footer-inner">
       <p>© <span id="year"></span> AuraPro Ads</p>
