--- a/contact.html
+++ b/contact.html
@@ -152,11 +152,11 @@ Launch campaigns</p>
       if (!form) return;
 
       const paypalLinks = {
-        "Starter Spotlight ($80)": "https://www.paypal.com/ncp/payment/M8N6KUEA7H7A8",
-        "Growth Campaign ($250)": "https://www.paypal.com/ncp/payment/FCXFF9DDUDZ68",
-        "Authority Launch ($550)": "https://www.paypal.com/ncp/payment/PN4DPGX9HBF6Q",
-        "Domination Package ($750)": "https://www.paypal.com/ncp/payment/RK4C7VGSKG8HC",
-        "Monthly Retainer ($2,500 / Month)": "https://www.paypal.com/ncp/payment/9YNMNSQ8CR8G6"
+        "Starter Spotlight ($80)": "https://www.paypal.com/ncp/payment/ESRSWF6ASNBDU",
+        "Growth Campaign ($250)": "",
+        "Authority Launch ($550)": "",
+        "Domination Package ($750)": "",
+        "Monthly Retainer ($2,500 / Month)": ""
       };
 
       form.addEventListener("submit", function (event) {
