--- a/contact.html
+++ b/contact.html
@@ -44,36 +44,24 @@
             <p class="card-body">
               Fill out this quick form to start your project.
             </p>
-            <p> <strong>How The Process Works</strong></p>
+           <p><strong>How The Process Works</strong></p>
 
 <p>We keep things simple, transparent, and fully guided—so you always know what’s happening at every step.</p>
-        
-<p>Step 1: Submit Your Project Details
-Fill out the short form with your business info, goals, and the package you’re interested in. This gives us everything needed to shape your ad correctly.
-</p>
 
-<p>Step 2: We Review & Prepare Your Concept
-Our system reviews your submission and prepares a high-level ad concept aligned with your package, brand tone, and intended outcome.</p>
+<p><strong>Step 1: Share Your Project & Choose a Package</strong><br>
+Fill out the short form with your business info, goals, and the package you want. When you submit, you’ll be taken to a secure PayPal checkout to lock in your spot.</p>
 
-<p>Step 3: Confirmation Email Sent to You
-You will receive an email confirming:
-Your selected package
-Video length range
-Creative direction summary
-Pricing & next steps</p>
+<p><strong>Step 2: Aura Reviews Your Details & Designs Your Concept</strong><br>
+Our AI project director, Aura, and the AuraPro Ads team review your submission and build a cinematic ad concept tailored to your brand, offer, and target audience.</p>
 
-<p><strong>👉 Nothing is produced or charged until you confirm</strong></p>
+<p><strong>Step 3: Concept & Next Steps Email</strong><br>
+You’ll receive an email that confirms your package, outlines how many videos and lengths you’re getting, summarizes the creative direction, and explains timing and next steps.</p>
 
-<p>Step 4: You Approve & Production Begins
-Once you confirm via email, your ad enters production.
-Our AI-assisted creative system generates your cinematic video based on your selections.</p>
-              
-<p>Step 5: Delivery
-Your completed ad is delivered digitally, ready to use for:
-Social media
-Ads
-Website promotions
-Launch campaigns</p>
+<p><strong>Step 4: You Approve & Production Begins</strong><br>
+Once you reply with your approval (or small tweaks), your ad moves into production. We generate your AI-powered video ads based on the approved concept.</p>
+
+<p><strong>Step 5: Delivery of Your Cinematic Ads</strong><br>
+Your completed ads are delivered digitally and ready to use for social media, paid ads, website promotions, and launches. Just download, upload, and start promoting.</p>
           </div>
 
           <div>
