--- a/contact.html
+++ b/contact.html
@@ -90,12 +90,12 @@ Your completed ads are delivered digitally and ready to use for social media, pa
               <div class="form-group">
                 <label for="package">Which package are you interested in?</label>
                 <select id="package" name="package" required>
-                  <option value="">Select a package</option>
-                  <option value="Starter Spotlight ($80)">Starter ($80)</option>
-                  <option value="Growth Campaign ($250)">Growth Campaign ($250)</option>
-                  <option value="Authority Launch ($550)">Authority Launch ($550)</option>
-                  <option value="Domination Package ($750)">Domination Package ($750)</option>
-                  <option value="Monthly Retainer ($2,500 / Month)">Monthly Retainer ($2,500 / Month)</option>
+                  <option value="Select a package"></option>
+                  <option value="Starter ($80)">Starter ($80)</option>
+                  <option value="Growth ($250)">Growth Campaign ($250)</option>
+                  <option value="Authority ($550)">Authority Launch ($550)</option>
+                  <option value="Domination ($750)">Domination Package ($750)</option>
+                  <option value="Monthly Retainer ($2,500 / Month)">Aura Engine Retainer ($2,500 / Month)</option>
                   <option value="Not sure">Not Sure – Recommend One</option>
                 </select>
               </div>
