--- a/contact.html
+++ b/contact.html
@@ -45,25 +45,21 @@
               Fill out this quick form to start your project.
             </p>
            <p><strong>How The Process Works</strong></p>
-
+            
 <p>We keep things simple, transparent, and fully guided—so you always know what’s happening at every step.</p>
 
-<p><strong>Step 1: Share Your Project & Choose a Package</strong><br>
-Fill out the short form with your business info, goals, and the package you want. When you submit, you’ll be taken to a secure PayPal checkout to lock in your spot.</p>
+<p><strong>Step 1: Provide Info & Choose a Package</strong><br>
+Fill out the short form with your business info, goals, and the package you want. When you submit, you’ll be taken to a secure PayPal checkout to lock in your ad project.</p>
 
 <p><strong>Step 2: Aura Reviews Your Details & Designs Your Concept</strong><br>
-Our AI project director, Aura, and the AuraPro Ads team review your submission and build a cinematic ad concept tailored to your brand, offer, and target audience.</p>
+Our AI project director, Aura, reviews your submission and turns it into a clear cinematic concept tailored to your brand, offer, and audience based off your responses.</p>
 
-<p><strong>Step 3: Concept & Next Steps Email</strong><br>
-You’ll receive an email that confirms your package, outlines how many videos and lengths you’re getting, summarizes the creative direction, and explains timing and next steps.</p>
+<p><strong>Step 3: Your Ads Enter Production</strong><br>
+Once your concept is set, your ad(s) move straight into production. You’ll get an email letting you know your AuraPro video ads are being generated.</p>
 
-<p><strong>Step 4: You Approve & Production Begins</strong><br>
-Once you reply with your approval (or small tweaks), your ad moves into production. We generate your AI-powered video ads based on the approved concept.</p>
-
-<p><strong>Step 5: Delivery of Your Cinematic Ads</strong><br>
-Your completed ads are delivered digitally and ready to use for social media, paid ads, website promotions, and launches. Just download, upload, and start promoting.</p>
+<p><strong>Step 4: Delivery & Quick Feedback</strong><br>
+Your completed ad(s) are delivered digitally and ready to post for social media, ads, website promotions, and launches. With your delivery email, you’ll also receive a quick survey to share feedback and help us keep leveling up AuraPro Ads.</p>
           </div>
-
           <div>
             <!-- We still point to Formspree, but JS will intercept the submit -->
             <form class="form" id="wemir-form" method="POST" action="https://formspree.io/f/mjkdzwaq">
