--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         <a href="index.html" class="nav-link active">Home</a>
         <a href="services.html" class="nav-link">Services</a>
         <a href="pricing.html" class="nav-link">Pricing</a>
+        <a href="survey.html" class="nav-link">Take Our Survey
         <a href="contact.html" class="nav-link nav-cta">Get Your Ad Created</a>
-        <a href="survey.html" class="nav-link">Survey
+        
       </nav>
     </div>
   </header>
