--- a/services.html
+++ b/services.html
@@ -22,6 +22,7 @@
         <a href="services.html" class="nav-link active">Services</a>
         <a href="pricing.html" class="nav-link">Pricing</a>
         <a href="contact.html" class="nav-link nav-cta">Get Your Ad Created</a>
+        <a href="survey.html" class="nav-link">Take Our Survey</a>
       </nav>
     </div>
   </header>
