--- a/survey.html
+++ b/survey.html
@@ -22,7 +22,7 @@
         <a href="services.html" class="nav-link">Services</a>
         <a href="pricing.html" class="nav-link">Pricing</a>
         <a href="contact.html" class="nav-link">Get Your Ad Created</a>
-        <a href="survey.html" class="nav-link nav-cta active">Take Our Survey</a>
+        <a href="survey.html" class="nav-link">Take Our Survey</a>
       </nav>
     </div>
   </header>
