--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Get Your Ad Created | WEMIR Systems</title>
+  <title>Get Your Ad Created | AuraPro Ads</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,6 @@
     <div class="container nav-container">
       <a href="index.html" class="logo">
         <span class="logo-main">AuraPro<span class="logo-accent"> Ads</span></span>
-        <span class="logo-tag">WEMIR Systems</span>
       </a>
       <nav class="main-nav">
         <a href="index.html" class="nav-link">Home</a>
