--- a/survey.html
+++ b/survey.html
@@ -66,7 +66,7 @@
               </div>
 
               <div class="form-group">
-                <label for="email">Email (optional, for follow-up)</label>
+                <label for="email">Email (optional)</label>
                 <input type="email" id="email" name="email" placeholder="you@example.com">
               </div>
 
