--- a/survey.html
+++ b/survey.html
@@ -43,7 +43,7 @@
       <div class="container">
         <div class="grid grid-2 contact-grid">
           <div>
-            <h2 class="card-title">Help Us Level Up AuraPro</h2>
+            <h2 class="card-title">Help Us Level Up AuraPro Ads</h2>
             <p class="card-body">
               Your feedback directly shapes how we improve our process, our ads, and the overall experience for you and future clients.
             </p>
