--- a/pricing.html
+++ b/pricing.html
@@ -56,7 +56,7 @@
 
           <!-- Growth -->
           <div class="card card-price card-highlight">
-            <h2 class="card-title">Growth Campaign</h2>
+            <h2 class="card-title">Growth</h2>
             <p class="price">$250</p>
             <p class="card-body">
               For brands ready to look more professional online and across social platforms.
@@ -71,7 +71,7 @@
 
           <!-- Authority -->
           <div class="card card-price">
-            <h2 class="card-title">Authority Launch</h2>
+            <h2 class="card-title">Authority</h2>
             <p class="price">$550</p>
             <p class="card-body">
               For launches and brands that want a more serious, elevated presence.
@@ -86,7 +86,7 @@
 
           <!-- Domination -->
           <div class="card card-price">
-            <h2 class="card-title">Domination Package</h2>
+            <h2 class="card-title">Domination</h2>
             <p class="price">$750</p>
             <p class="card-body">
               For brands that want a full campaign: multiple ads, multiple angles, multi-platform.
