--- a/pricing.html
+++ b/pricing.html
@@ -66,7 +66,7 @@
               <li>2× short cinematic ads, ~10 seconds each</li>
               <li>Cohesive concept and visuals across all three videos</li>
             </ul>
-            <a href="contact.html" class="btn btn-primary">Start a Growth Campaign</a>
+            <a href="contact.html" class="btn btn-primary">Start a Growth</a>
           </div>
 
           <!-- Authority -->
@@ -81,7 +81,7 @@
               <li>2× supporting cinematic ads, ~20 seconds each</li>
               <li>Story-driven structure to showcase brand, offer, and key benefits</li>
             </ul>
-            <a href="contact.html" class="btn btn-outline">Get Authority Launch</a>
+            <a href="contact.html" class="btn btn-outline">Get Authority</a>
           </div>
 
           <!-- Domination -->
@@ -96,7 +96,7 @@
               <li>2× cinematic ads, ~30 seconds each</li>
               <li>3× short cinematic ads, ~10 seconds each</li>
             </ul>
-            <a href="contact.html" class="btn btn-outline">Get Domination Package</a>
+            <a href="contact.html" class="btn btn-outline">Get Domination</a>
           </div>
         </div>
 
@@ -110,7 +110,7 @@
           <ul class="list list-inline">
             <li>Ongoing campaign planning <strong>or</strong> 2 premium commercials each month</li>
             <li>3 short ads each month ~30 seconds each</li>
-            <li>Ongoing optimization of hooks and visuals</li>
+            <li>Stronger hooks and visuals</li>
           </ul>
           <div class="centered">
             <a href="contact.html" class="btn btn-primary">Apply for Retainer</a>
