--- a/pricing.html
+++ b/pricing.html
@@ -66,7 +66,7 @@
               <li>2× short cinematic ads, ~10 seconds each</li>
               <li>Cohesive concept and visuals across all three videos</li>
             </ul>
-            <a href="contact.html" class="btn btn-primary">Start a Growth</a>
+            <a href="contact.html" class="btn btn-primary">Start Growth</a>
           </div>
 
           <!-- Authority -->
