--- a/survey.html
+++ b/survey.html
@@ -31,7 +31,7 @@
     <!-- Hero -->
     <section class="section page-hero">
       <div class="container">
-        <h1 class="page-title">Client Experience Survey</h1>
+        <h1 class="page-title">How Was Your Experience Here?</h1>
         <p class="section-intro">
           Thanks for working with AuraPro Ads. This quick survey has 5 questions and helps us improve your experience and the results you get from your ads.
         </p>
