--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@ Your completed ad(s) are delivered digitally and ready to post for social media,
               <div class="form-group">
                 <label for="package">Which package are you interested in?</label>
                 <select id="package" name="package" required>
-                  <option value="Select a package"></option>
+                  <option value="">Choose one..</option>
                   <option value="Starter ($80)">Starter ($80)</option>
                   <option value="Growth ($250)">Growth Campaign ($250)</option>
                   <option value="Authority ($550)">Authority Launch ($550)</option>
