--- a/contact.html
+++ b/contact.html
@@ -88,9 +88,9 @@ Your completed ad(s) are delivered digitally and ready to post for social media,
                 <select id="package" name="package" required>
                   <option value="">Choose one..</option>
                   <option value="Starter ($80)">Starter ($80)</option>
-                  <option value="Growth ($250)">Growth Campaign ($250)</option>
-                  <option value="Authority ($550)">Authority Launch ($550)</option>
-                  <option value="Domination ($750)">Domination Package ($750)</option>
+                  <option value="Growth ($250)">Growth ($250)</option>
+                  <option value="Authority ($550)">Authority ($550)</option>
+                  <option value="Domination ($750)">Domination ($750)</option>
                   <option value="Monthly Retainer ($2,500 / Month)">Aura Engine Retainer ($2,500 / Month)</option>
                 </select>
               </div>
