--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@ Your completed ad(s) are delivered digitally and ready to post for social media,
               <div class="form-group">
                 <label for="package">Which package are you interested in?</label>
                 <select id="package" name="package" required>
-                  <option value="">Choose one..</option>
+                  <option value="">Choose one...</option>
                   <option value="Starter ($80)">Starter ($80)</option>
                   <option value="Growth ($250)">Growth ($250)</option>
                   <option value="Authority ($550)">Authority ($550)</option>
@@ -134,10 +134,10 @@ Your completed ad(s) are delivered digitally and ready to post for social media,
       if (!form) return;
 
       const paypalLinks = {
-        "Starter Spotlight ($80)": "https://www.paypal.com/ncp/payment/ESRSWF6ASNBDU",
-        "Growth Campaign ($250)": "",
-        "Authority Launch ($550)": "",
-        "Domination Package ($750)": "",
+        "Starter ($80)": "https://www.paypal.com/ncp/payment/ESRSWF6ASNBDU",
+        "Growth ($250)": "",
+        "Authority ($550)": "",
+        "Domination ($750)": "",
         "Monthly Retainer ($2,500 / Month)": ""
       };
 
