--- a/contact.html
+++ b/contact.html
@@ -86,12 +86,12 @@ Your completed ad(s) are delivered digitally and ready to post for social media,
               <div class="form-group">
                 <label for="package">Which package are you interested in?</label>
                 <select id="package" name="package" required>
-                  <option value="">Choose one...</option>
+                  <option value="Select a package">Choose one...</option>
                   <option value="Starter ($80)">Starter ($80)</option>
                   <option value="Growth ($250)">Growth ($250)</option>
                   <option value="Authority ($550)">Authority ($550)</option>
                   <option value="Domination ($750)">Domination ($750)</option>
-                  <option value="Monthly Retainer ($2,500 / Month)">Aura Engine Retainer ($2,500 / Month)</option>
+                  <option value="Retainer ($2,500 / Month)">Aura Engine Retainer ($2,500 / Month)</option>
                 </select>
               </div>
 
@@ -138,7 +138,7 @@ Your completed ad(s) are delivered digitally and ready to post for social media,
         "Growth ($250)": "",
         "Authority ($550)": "",
         "Domination ($750)": "",
-        "Monthly Retainer ($2,500 / Month)": ""
+        "Retainer ($2,500 / Month)": ""
       };
 
       form.addEventListener("submit", function (event) {
