--- a/contact.html
+++ b/contact.html
@@ -134,11 +134,11 @@ Your completed ad(s) are delivered digitally and ready to post for social media,
       if (!form) return;
 
       const paypalLinks = {
-        "Starter ($80)": "https://www.paypal.com/ncp/payment/ESRSWF6ASNBDU",
-        "Growth ($250)": "",
-        "Authority ($550)": "",
-        "Domination ($750)": "",
-        "Retainer ($2,500 / Month)": ""
+        "Starter ($80)": "https://www.paypal.com/ncp/payment/C6SAM3DJGTDNA",
+        "Growth ($250)": "https://www.paypal.com/ncp/payment/C6SAM3DJGTDNA",
+        "Authority ($550)": "https://www.paypal.com/ncp/payment/C6SAM3DJGTDNA",
+        "Domination ($750)": "https://www.paypal.com/ncp/payment/C6SAM3DJGTDNA",
+        "Retainer ($2,500 / Month)": "https://www.paypal.com/ncp/payment/C6SAM3DJGTDNA"
       };
 
       form.addEventListener("submit", function (event) {
