--- a/terms.html
+++ b/terms.html
@@ -1,1 +1,203 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Terms of Use & Privacy Policy | AuraPro Ads</title>
+  <!-- Link this to your main stylesheet or to a dedicated legal.css -->
+  <link rel="stylesheet" href="legal.css">
+</head>
+<body class="legal-body">
+  <main class="legal-container">
+    <h1>Terms of Use</h1>
+    <p><strong>Last Updated: [Insert Date]</strong></p>
+
+    <p>Welcome to AuraPro Ads (“Company,” “we,” “our,” or “us”). These Terms of Use (“Terms”) govern your access to and use of our website, services, and all AI-generated advertising content including videos, scripts, concepts, and related materials (“Services”).</p>
+
+    <p>By accessing or using our Services, you acknowledge that you have read, understood, and agree to be bound by these Terms. If you do not agree, do not use the Services.</p>
+
+    <hr>
+
+    <h2>1. Service Overview</h2>
+    <p>AuraPro Ads provides AI-assisted creative services for producing advertisements, video spots, concept scripts, creative direction, and related digital deliverables. All outputs are created with AI tools, prompt engineering, and proprietary workflows.</p>
+
+    <p>You acknowledge that:</p>
+    <ul>
+      <li>Final visual results may vary based on AI limitations.</li>
+      <li>We do not guarantee specific ad performance or commercial outcomes.</li>
+      <li>All creative decisions are made at our discretion unless otherwise agreed in writing.</li>
+      <li>After approval, ads are delivered in <strong>less than 2 hours</strong>.</li>
+    </ul>
+
+    <hr>
+
+    <h2>2. No Refund Policy — All Sales Final</h2>
+    <p><strong>All payments are strictly non-refundable.</strong></p>
+
+    <p>This includes, without limitation:</p>
+    <ul>
+      <li>Package purchases</li>
+      <li>Custom orders</li>
+      <li>Deposits</li>
+      <li>Add-ons or upgrades</li>
+      <li>Concept development fees</li>
+    </ul>
+
+    <p>Because our Services involve digital goods, immediate creative labor, and AI-generated deliverables, <strong>no refunds, reversals, or chargebacks</strong> will be granted under any circumstance.</p>
+
+    <p>By purchasing, you expressly waive any right to dispute or reverse a charge.</p>
+
+    <hr>
+
+    <h2>3. Client Approval Process</h2>
+    <p>Before video creation begins:</p>
+    <ul>
+      <li>You will receive a concept, outline, or script for approval.</li>
+      <li>Production begins only after your written approval.</li>
+      <li>Once approved, the project cannot be revised, canceled, or refunded.</li>
+    </ul>
+
+    <hr>
+
+    <h2>4. Delivery Timeline</h2>
+    <p>Once approval is received, ads are delivered in <strong>less than 2 hours</strong>.</p>
+
+    <p>Delivery timeframes may vary slightly based on:</p>
+    <ul>
+      <li>AI rendering speed</li>
+      <li>System availability</li>
+      <li>Project complexity</li>
+    </ul>
+
+    <p>Delays do not constitute grounds for cancellation or refund.</p>
+
+    <hr>
+
+    <h2>5. License & Ownership</h2>
+    <p>Upon full payment and delivery, you receive a non-exclusive license to use the final exported video for advertising and promotional purposes.</p>
+
+    <p>You do <strong>not</strong> receive ownership or rights to:</p>
+    <ul>
+      <li>Internal prompts</li>
+      <li>Source files</li>
+      <li>Drafts or iterations</li>
+      <li>Underlying AI engineering</li>
+    </ul>
+
+    <p>You may not resell or redistribute internal creative systems or workflows.</p>
+
+    <hr>
+
+    <h2>6. Limitation of Liability</h2>
+    <p>To the fullest extent permitted by law, AuraPro Ads is not liable for:</p>
+    <ul>
+      <li>Loss of revenue or business opportunities</li>
+      <li>Poor ad performance or campaign results</li>
+      <li>Platform rejections (Meta, TikTok, YouTube, etc.)</li>
+      <li>Issues arising from your provided assets</li>
+      <li>AI inaccuracies or unpredictable outputs</li>
+    </ul>
+
+    <p>Our maximum liability is limited to the amount paid for the specific project, and even then, <strong>no refunds will be issued</strong>.</p>
+
+    <hr>
+
+    <h2>7. Client Responsibilities</h2>
+    <p>You agree to:</p>
+    <ul>
+      <li>Provide accurate business details</li>
+      <li>Own or legally license all materials submitted to us</li>
+      <li>Ensure your ad complies with all platform and legal requirements</li>
+    </ul>
+
+    <p>You assume full legal responsibility for how your final ad is used.</p>
+
+    <hr>
+
+    <h2>8. AI-Generated Content Disclaimer</h2>
+    <p>You acknowledge that:</p>
+    <ul>
+      <li>AI may generate unexpected or imperfect results</li>
+      <li>Outputs may not be entirely unique or copyrightable</li>
+      <li>Creative inconsistencies may occur</li>
+      <li>Visual artifacts or stylization may appear</li>
+    </ul>
+
+    <p>You accept these risks as inherent to AI-generated advertising.</p>
+
+    <hr>
+
+    <h2>9. Prohibited Uses</h2>
+    <p>You may not use our Services for:</p>
+    <ul>
+      <li>Illegal activities</li>
+      <li>False claims or misleading advertising</li>
+      <li>Hate, violence, or discrimination</li>
+      <li>Political persuasion</li>
+      <li>Adult content (unless explicitly approved)</li>
+    </ul>
+
+    <hr>
+
+    <h2>10. Termination</h2>
+    <p>We reserve the right to refuse service or terminate access for any violation of these Terms. No refunds will be issued upon termination.</p>
+
+    <hr>
+
+    <h1>Privacy Policy</h1>
+
+    <h2>1. Information We Collect</h2>
+    <p>We may collect information such as:</p>
+    <ul>
+      <li>Name</li>
+      <li>Email address</li>
+      <li>Business details</li>
+      <li>Submitted ad information</li>
+      <li>Payment confirmations (via PayPal or other processors)</li>
+    </ul>
+
+    <hr>
+
+    <h2>2. How We Use Your Information</h2>
+    <p>Your information is used to:</p>
+    <ul>
+      <li>Communicate with you about projects and approvals</li>
+      <li>Create ad concepts and deliver Services</li>
+      <li>Verify payments and manage orders</li>
+      <li>Improve our offerings and internal systems</li>
+    </ul>
+
+    <p>We do not sell your personal information to third-party marketers.</p>
+
+    <hr>
+
+    <h2>3. Data Security</h2>
+    <p>We implement reasonable security measures to protect your personal information. However, no system is perfectly secure, and we cannot guarantee absolute security.</p>
+
+    <hr>
+
+    <h2>4. Third-Party Tools</h2>
+    <p>We use third-party services such as, but not limited to:</p>
+    <ul>
+      <li>PayPal (payments)</li>
+      <li>Pika.art (video generation)</li>
+      <li>OpenAI (content generation)</li>
+      <li>Zapier (automation)</li>
+    </ul>
+    <p>These services process data under their own terms and privacy policies.</p>
+
+    <hr>
+
+    <h1>Disclaimer</h1>
+    <p>The content produced by AuraPro Ads is generated using artificial intelligence and creative direction. While we strive for professional quality, we do not guarantee specific commercial results, engagement levels, or platform approval.</p>
+
+    <p>Using our Services means you accept all risks associated with AI-generated media and advertising.</p>
+
+    <hr>
+
+    <p>If you have questions about these Terms or this Policy, please contact us at:<br>
+    <strong>[Insert Contact Email]</strong></p>
+  </main>
+</body>
+</html>
 
